[gd_scene load_steps=6 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://game.gd" type="Script" id=2]
[ext_resource path="res://winScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://levels/level_0.tscn" type="PackedScene" id=4]
[ext_resource path="res://camera2D.gd" type="Script" id=5]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource( 5 )

[node name="Levels" type="Node" parent="."]

[node name="Level_0" parent="Levels" instance=ExtResource( 4 )]

[node name="PlayerPos" type="Node2D" parent="."]
position = Vector2( 47.6454, 118.56 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 46.55, 118.75 )

[node name="Joints" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="WinScreen" parent="CanvasLayer" instance=ExtResource( 3 )]
visible = false

[node name="Timer" type="Timer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
